feat: use select2 to fetch fk and qs objects from api

--- a/package.json
+++ b/package.json
@@ -11,5 +11,7 @@
     "rollup-plugin-scss": "^4.0.0",
     "sass": "^1.69.7"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@json-editor/json-editor": "^2.13.1"
+  }
 }
