--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,4 +30,8 @@ jobs:
     - name: 🔬 Test with pytest and calculate coverage 
       run: make test
     - name: 🩺 Upload coverage to codecov.io
-      uses: codecov/codecov-action@v2
+      uses: codecov/codecov-action@v4
+      with:
+        fail_ci_if_error: true 
+        token: ${{ secrets.CODECOV_TOKEN }}
+        verbose: true 
