--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: ["3.9", "3.10"]
-        django-version: ["3.2", "4.2"]
+        python-version: ["3.10", "3.11", "3.12"]
+        django-version: ["3.2", "4.2", "5.1"]
     name: 🦠 Test on Python ${{ matrix.python-version }} with Django ${{ matrix.django-version }}
 
     steps:
