chore: update rollup build to output minified code

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "structured-json-form-field",
   "version": "1.0.0",
   "scripts": {
-    "build": "rollup -c",
+    "build": "NODE_ENV=production rollup -c",
     "dev": "rollup -c -w"
   },
   "devDependencies": {
