--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,16 +12,12 @@ jobs:
     strategy:
       max-parallel: 4
       matrix:
-        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
+        python-version: ["3.9", "3.10", "3.11", "3.12"]
         django-version: ["4.2", "5.1", "5.2"]
         exclude:
           - python-version: "3.9" # Python 3.9 is not supported by Django 5.1
             django-version: "5.1"
-          - python-version: "3.8" # Python 3.8 is not supported by Django 5.1
-            django-version: "5.1"
-          - python-version: "3.9" # Python 3.9 is not supported by Django 5.1
-            django-version: "5.2"
-          - python-version: "3.8" # Python 3.8 is not supported by Django 5.1
+          - python-version: "3.9" # Python 3.9 is not supported by Django 5.2
             django-version: "5.2"
             
     name: 🦠 Test on Python ${{ matrix.python-version }} with Django ${{ matrix.django-version }}
