chore: update changelog updater

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,9 @@ match = "next"
 prerelease = true
 prerelease_token = "beta"
 
+[tool.semantic_release.changelog]
+mode = "update"
+
 [tool.semantic_release.changelog.default_templates]
 changelog_file = "CHANGELOG.md"
 output_format = "md"
