--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-djangorestframework>=3.10.0,<4.0.0
-Django>=4.2,<6
-pydantic~=2.9.2
+djangorestframework>=3.14.0,<4.0.0
+Django>=4.2
+pydantic>=2.12
